# lyrics-in-terminal

./: .gitignore  MANIFEST.in  README.md  config_update.py  lyrics-in-terminal.py  lyrics.py  lyrics.sh  media-detect.sh  pager.py  player.py  pyproject.toml  setup.py  track.py  util.py
lyrics/: __init__.py  config.py  detect-media.sh  lyrics.cfg  lyrics_in_terminal.py  player.py  track.py  util.py  utils.py  window.py
lyrics/display/: help.py  input.py  key.py  window.py
lyrics/listener/: base.py  dbus.py  player.py
lyrics/listeners/: base.py  dbus.py
lyrics/sources/: __init__.py  azlyrics.py  base.py  genius.py  google.py  liblrc.py
test/: curses-player-select.py  spotify-listener-async.py  spotify-listener.py
